--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- utility css file -->
-    <link rel="stylesheet" href="/public/assets/css/utility.css">
+    <link rel="stylesheet" href="./public/assets/css/utility.css">
     <!-- style css file -->
-    <link rel = "stylesheet" href = "/public/assets/css/style.css">
+    <link rel = "stylesheet" href = "./public/assets/css/style.css">
     <!-- fontawesome cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -164,6 +164,6 @@
 
 
     <!-- custom js file -->
-    <script src="/public/assets/js/script.js"></script>
+    <script src="./public/assets/js/script.js"></script>
   </body>
 </html>
