--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- utility css file -->
     <link rel="stylesheet" href="./public/assets/css/utility.css">
     <!-- style css file -->
-    <link rel = "stylesheet" href = "./public/assets/css/style.css">
+    <link rel = "stylesheet" href = "assets/css/style.css">
     <!-- fontawesome cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
