--- a/skills.html
+++ b/skills.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- utility css file -->
-    <link rel="stylesheet" href="/public/assets/css/utility.css">
+    <link rel="stylesheet" href="./assets/css/utility.css">
     <!-- style css file -->
-    <link rel = "stylesheet" href = "/public/assets/css/style.css">
+    <link rel = "stylesheet" href = "./assets/css/style.css">
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <!-- google fonts -->
@@ -173,6 +173,6 @@
         </div>
       </div>
     </footer>
-    <script src="/public/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
