--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class = "row-right">
           <div class = "img-border">
             <div class = "img-container">
-              <img src = "./assets/img/realpic.png" alt = "my photo">
+              <img src = "assets/img/realpic.png" alt = "my photo">
             </div>
           </div>
         </div>
