--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h2>Web-Developer and Programmer</h2>
           <div class = "home-pg-btn">
             <a href="about.html"><button type = "button" class = "btn">About</button></a>
-            <a href="https://github.com/TheRealAceCoder" target="blank"><button type = "button" class = "btn">my works</button></a>
+            <a href="https://github.com/TheRealAceCoder" target="blank"><button type = "button" class = "btn">my projects</button></a>
           </div>
         </div>
 
